<resources>
    <string name="app_name">Doctor</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="connecting">Connecting…</string>
    <string name="connection_lost">Connection lost</string>
    <string name="doctor">Doctor:</string>
    <string name="patient">Patient:</string>
    <string name="illness">Illness</string>
    <string name="advice">Advice</string>
    <string name="medicines">Medicines</string>
    <string name="tests">Tests</string>
    <string name="save">Save</string>
    <string name="add_prescription">Add prescription</string>
    <string name="not_connected">Not connected</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_your_doctor_account">Sign in with your Doctor account</string>
    <string name="this_email_and_password_does_not_match">This email and password does not match.</string>
    <string name="too_many_retries">Too many retries, try again after a while</string>
    <string name="sign_out">Sign out</string>
    <string name="change_password">Change password</string>
    <string name="profile">Profile</string>
    <string name="patients_are_waiting_in_the_chamber">patients are waiting in the chamber</string>
    <string name="go_to_chamber">Go to chamber</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_your_password">Change your password</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="intermediaries">Intermediaries:</string>
    <string name="patients">Patients:</string>
    <string name="speciality_title">Speciality:</string>
    <string name="contact_no">Contact no:</string>
    <string name="contact_number_lnk"><![CDATA[<u>%1s</u>]]></string>
    <string name="bkash">bKash:</string>
    <string name="name">Name</string>
    <string name="speciality">Speciality</string>
    <string name="contact_number">Contact number</string>
    <string name="bkash_without_colon">bKash</string>
    <string name="profile_information">Profile information</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit profile</string>
    <string name="txn">Txn: %1s</string>
    <string name="bkash_with_param">bKash: %1s</string>
    <string name="no_patients">No patients</string>
    <string name="chamber">Chamber</string>
</resources>