<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:windowSoftInputMode="adjustResize"
    tools:context=".ui.ChangePasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/doctor_background_low_opacity"
        android:windowSoftInputMode="adjustResize">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_rect_with_tint_bg"
            android:orientation="vertical"
            android:padding="16dp"
            android:windowSoftInputMode="adjustResize">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:contentDescription="Change password icon"
                    android:src="@drawable/ic_key_48px"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/change_your_password"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="24sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"
                tools:visibility="invisible" />

            <TextView
                android:id="@+id/tv_too_many_retries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_red_light"
                tools:text="Too many retries" />

            <TextView
                android:id="@+id/tv_wait_for_a_while"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/primary_text_light"
                tools:text="Wait for a while" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_old_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:textColorHint="@android:color/secondary_text_light"
                android:windowSoftInputMode="adjustResize"
                app:boxStrokeColor="@android:color/secondary_text_light"
                app:endIconMode="password_toggle"
                app:endIconTint="@android:color/tertiary_text_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_old_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@android:color/primary_text_light" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_new_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:textColorHint="@android:color/primary_text_light"
                android:windowSoftInputMode="adjustResize"
                app:boxStrokeColor="@android:color/secondary_text_light"
                app:endIconMode="password_toggle"
                app:endIconTint="@android:color/tertiary_text_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@android:color/primary_text_light" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_new_pass_confirm"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_password"
                android:textColorHint="@android:color/primary_text_light"
                android:windowSoftInputMode="adjustResize"
                app:boxStrokeColor="@android:color/secondary_text_light"
                app:endIconMode="password_toggle"
                app:endIconTint="@android:color/tertiary_text_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_new_pass_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@android:color/primary_text_light" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:windowSoftInputMode="adjustResize">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/cancel" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_confirm_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/confirm" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</ScrollView>
