<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/doctor_background_low_opacity"
    tools:context=".ui.MainActivity">

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="Menu button"
        android:padding="8dp"
        android:src="@drawable/ic_round_menu_24"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_menu"
        android:layout_margin="4dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/rounded_rect_with_tint_bg"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone"
        tools:visibility="visible">

        <RelativeLayout
            android:id="@+id/rl_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rect_selector"
            android:clickable="false"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="false"
            android:paddingVertical="4dp">

            <ImageView
                android:id="@+id/iv_profile_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="16dp"
                android:background="?android:selectableItemBackground"
                android:clickable="false"
                android:contentDescription="Profile button icon"
                android:focusable="false"
                android:paddingTop="3dp"
                android:src="@drawable/ic_baseline_account_circle_24"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_profile_icon"
                android:background="?android:selectableItemBackground"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@android:color/primary_text_light"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="4dp"
            android:background="#50000000" />

        <RelativeLayout
            android:id="@+id/rl_change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rect_selector"
            android:clickable="false"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="false"
            android:paddingVertical="4dp">

            <ImageView
                android:id="@+id/iv_change_pass_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="16dp"
                android:clickable="false"
                android:contentDescription="Change password button icon"
                android:focusable="false"
                android:paddingTop="3dp"
                android:src="@drawable/ic_key_48px"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_change_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_change_pass_icon"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="@android:color/primary_text_light"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="4dp"
            android:background="#50000000" />

        <RelativeLayout
            android:id="@+id/rl_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rect_selector"
            android:clickable="false"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:focusable="false"
            android:paddingVertical="4dp">

            <ImageView
                android:id="@+id/iv_sign_out_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="16dp"
                android:background="?android:selectableItemBackground"
                android:clickable="false"
                android:contentDescription="Logout button icon"
                android:focusable="false"
                android:paddingTop="3dp"
                android:src="@drawable/ic_logout"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_sign_out_icon"
                android:background="?android:selectableItemBackground"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/sign_out"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_intermediary_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_menu"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/primary_text_light"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:text="20" />

    <TextView
        android:id="@+id/tv_wait_in_chamber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_intermediary_count"
        android:layout_centerHorizontal="true"
        android:text="@string/patients_are_waiting_in_the_chamber"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_chamber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_wait_in_chamber"
        android:layout_centerHorizontal="true"
        android:text="@string/go_to_chamber" />

    <TextView
        android:id="@+id/tv_all_intermediary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_go_to_chamber"
        android:layout_margin="16dp"
        android:text="@string/intermediaries"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_intermediary_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_all_intermediary"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:foreground="@drawable/rounded_rectangle_without_border"
        tools:listitem="@layout/rcv_intermediary_item" />

</RelativeLayout>